Update README.md with some new info.